--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
 <meta charset='utf-8'>
-<title>John P. Dickerson</title>
+<title>DonghaoZhu</title>
 <meta content='Personal website for John P. Dickerson' name='description'>
 <meta content='John P. Dickerson' name='author'>
 <meta content='width=device-width, initial-scale=1.0' name='viewport'>
