--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!-- Mirrored from 127.0.0.1:9292/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 09 May 2021 05:33:00 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
+<meta charset='utf-8'>
 <title>DonghaoZhu</title>
 <link href='vendor/css/bootstrap-theme-cerulean.min.css' rel='stylesheet' type='text/css'>
 <!-- %link{:href => "/vendor/css/bootstrap-theme.min.css", :type => "text/css", :rel => "stylesheet"} -->
