--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Outside of Maryland, I am Chief Scientist at <a href="https://www.arthur.ai/">Ar
 </p>
 </div>
 <div class='col-md-4'>
-<img alt='John P. Dickerson' class='featurette-image img-responsive' src='img/dickerson_umd.jpg'>
+<img src='Dojun.jpg'>
 </div>
 </div>
 <hr class='featurette-divider'>
