--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Outside of Maryland, I am Chief Scientist at <a href="https://www.arthur.ai/">Ar
 </p>
 </div>
 <div class='col-md-4'>
-<img src="images/Dojun.jpg" alt="DonghaoZhu"/>
+<img src="Dojun.jpg" alt="DonghaoZhu"/>
 </div>
 </div>
 <hr class='featurette-divider'>
