--- a/index.html
+++ b/index.html
@@ -6,29 +6,16 @@
 <head>
 <meta charset='utf-8'>
 <title>DonghaoZhu</title>
-<link href='vendor/css/bootstrap-theme-cerulean.min.css' rel='stylesheet' type='text/css'>
-<!-- %link{:href => "/vendor/css/bootstrap-theme.min.css", :type => "text/css", :rel => "stylesheet"} -->
-<link href='css/styles.css' rel='stylesheet' type='text/css'>
-<link href='css/sticky-footer.css' rel='stylesheet' type='text/css'>
-<!-- IE 6-8 can now load HTML5 -->
-<!--[if lt IE 9]>
-<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<script src='js/jquery.min.js' type='text/javascript'></script>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id='wrap'>
-<div class='navbar navbar-inverse navbar-static-top' role='navigation'>
-<div class='container'>
-<div class='navbar-header'>
-<button class='navbar-toggle' data-target='.navbar-collapse' data-toggle='collapse' type='button'>
-<span class='sr-only'>Toggle navigation</span>
-<span class='icon-bar'></span>
-<span class='icon-bar'></span>
-<span class='icon-bar'></span>
-</button>
-<a class='navbar-brand' href='index.html'>John P. Dickerson</a>
-</div>
+ <div class="nav">
+       <ul>
+           <li><a href="#">Main</a></li>
+           <li><a href="#">Publications</a></li>
+           <li><a href="#">C.V.</a></li>
+       </ul>
+  </div>
 <nav class='navbar-collapse collapse'>
 <ul class='nav navbar-nav'>
 <!--
