--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <div class="nav">
-       <ul>
-           <li><a href="#">Main</a></li>
-           <li><a href="#">Publications</a></li>
-           <li><a href="#">C.V.</a></li>
-       </ul>
-  </div>
+  <div class="header w">
+        <div class="nav">
+            <ul>
+                <li><a href="#">Main</a></li>
+                <li><a href="#">Publications</a></li>
+                <li><a href="#">C.V.</a></li>
+            </ul>
+         </div>
+    </div>
 </h2>
 <p class='lead'>
 I work at the intersection of computer science, AI, and economics, with a focus on solving <em>practical problems</em> using stochastic optimization and machine learning.
