--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   <!-- 头部区域start -->
   <div class="header w">
         <div class="nav">
             <ul>
@@ -18,6 +19,10 @@
             </ul>
          </div>
     </div>
+   <!-- 头部区域finish -->
+   <!-- content区域start -->
+   <div class="content"> </div>
+   <!-- content区域start -->
 </h2>
 <p class='lead'>
 I work at the intersection of computer science, AI, and economics, with a focus on solving <em>practical problems</em> using stochastic optimization and machine learning.
