--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header">
         <div class="nav">
             <ul>
-                <li><a href="#">Main</a></li>
+                <li><a href="#">DonghaoZhu</a></li>
                 <li><a href="#">Publications</a></li>
                 <li><a href="#">C.V.</a></li>
             </ul>
