--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
 <body>
    <!-- 头部区域start -->
     <div class="header">
+        <div class="w">
         <div class="main">
             <ul>
                 <li><a href="#">Donghao Zhu</a></li>
             </ul>
-         </div>
+            </div>
+        </div>
+         <div class="w">
         <div class="nav">
             <ul>
                 <li><a href="#">Publications</a></li>
                 <li><a href="#">C.V.</a></li>
             </ul>
          </div>
-
+        </div>
          <div class="langu">
             <ul>
                 <li><a href="#">En</a></li>
