--- a/index.html
+++ b/index.html
@@ -65,6 +65,26 @@
     </div>   
    </div>
    <!-- content区域start -->
+    <!-- news区域start -->
+   <div class="news">
+    <div class="n">
+          <div class="paper">
+            <p>
+                <strong>Note to prospective PhD students:</strong>  The CS department at the University of Maryland admits students to the department itself, not to an individual advisor.  However, I will do my best to respond to inquiry emails.
+                </p>
+                <p>
+                <strong>Consider applying to the <a href="https://www.cs.umd.edu/maryland-max-planck">Maryland Max Planck PhD Program</a>:</strong> spend time at both MPI in Germany and UMD in the US, work with tons of great folks, and get paid more!
+                </p>
+                <p>
+                <small>
+                <em>
+                If you are an already-admitted or current PhD student at the University of Maryland, feel free to get in touch!  <code>john@cs.umd.edu</code>
+                </em>
+                </small>
+                </p>
+          </div>
+    </div>   
+   </div>
 </body>
 
 <!-- Mirrored from 127.0.0.1:9292/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 09 May 2021 05:33:22 GMT -->
