--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    <div class="content">
     <div class="w">
           <div class="text">
-               <h2>Practical Smart Market Design.</h2>
+               <h2>Smart Market Design.</h2>
                <h3>I work at the intersection of computer science, AI, and economics, with a focus on solving practical problems using stochastic optimization and machine learning.
             </h3>
             <fieldset></fieldset>
