--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="w">
           <div class="text">
                <h2>Smart Market Design.</h2>
-               <h3>I work at the intersection of computer science, mathematics, AI and economics, with a focus on solving practical problems using stochastic optimization. 
+               <h3>I work at the intersection of computer science, mathematics, AI and economics, with a focus on solving practical problems using simulations and stochastic optimization. 
             </h3>
             <fieldset></fieldset>
             <p>  I'm an Assistant Professor in the <a href="http://cs.umd.edu/">Department of Computer Science</a> at the University of Maryland, with a joint appointment in the University of Maryland Institute for Advanced Computer Studies (<a href="http://www.umiacs.umd.edu/">UMIACS</a>).  I hold a PhD in computer science from <a href="http://www.cs.cmu.edu/">Carnegie Mellon</a>.  At Maryland, I am also formally affiliated with the Applied Mathematics &amp; Statistics, and Scientific Computation (<a href="http://amsc.umd.edu/">AMSC</a>) program, as well as the Human-Computer Interaction Laboratory (<a href="http://www.cs.umd.edu/hcil/">HCIL</a>) and Maryland Transportation Institute (<a href="https://mti.umd.edu/">MTI</a>).  Recently, I've become involved with worldwide blood donation, primarily through a visiting research position at Facebook.  I've also been heavily involved in the world of organ allocation for a decade, primarily through the United Network for Organ Sharing (UNOS).
