--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ul>
                 <li><a href="#">日本語</a></li>
                 <li><a href="#">中文</a></li>
-                <li><a href="#">En</a></li>
+                <li><a href="#">English</a></li>
             </ul>
          </div>
     </div>
