--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
          <div class="langu">
             <ul>
-                <li><a href="#">日本語</a></li>
-                <li><a href="#">中文</a></li>
-                <li><a href="#">English</a></li>
+                <li><a href="index.html">English</a></li>
+                <li><a href="Chinese.html">中文</a></li>
+                <li><a href="Japanese.html">日本語</a></li>
             </ul>
          </div>
     </div>
