--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
    </div>
    <!-- content区域start -->
     <!-- news区域start -->
+  <div class="w">
    <div class="news">
     <div class="n">
           <div class="paper">
@@ -84,6 +85,7 @@
           </div>
     </div>   
    </div>
+ </div>
 </body>
 
 <!-- Mirrored from 127.0.0.1:9292/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 09 May 2021 05:33:22 GMT -->
