--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="n">
           <div class="paper">
             <p>
-                <strong>Note to prospective PhD students:</strong>  The CS department at the University of Maryland admits students to the department itself, not to an individual advisor.  However, I will do my best to respond to inquiry emails.
+                <strong>News</strong>   
                 </p>
                 <p>
                 <strong>Consider applying to the <a href="https://www.cs.umd.edu/maryland-max-planck">Maryland Max Planck PhD Program</a>:</strong> spend time at both MPI in Germany and UMD in the US, work with tons of great folks, and get paid more!
