--- a/Japanese.html
+++ b/Japanese.html
@@ -30,7 +30,7 @@
             <ul>
                 <li><a href="Japanese.html">日本語</a></li>
                 <li><a href="Chinese.html">中文</a></li>
-                <li><a href="index.html">English</a></li> 
+                <li><a href="index.html">English</a></li>
             </ul>
          </div>
     </div>
@@ -65,11 +65,12 @@
    </div>
    <!-- content区域start -->
     <!-- news区域start -->
+  <div class="w">
    <div class="news">
     <div class="n">
           <div class="paper">
             <p>
-                <strong>Note to prospective PhD students:</strong>  The CS department at the University of Maryland admits students to the department itself, not to an individual advisor.  However, I will do my best to respond to inquiry emails.
+                <strong>News</strong>   
                 </p>
                 <p>
                 <strong>Consider applying to the <a href="https://www.cs.umd.edu/maryland-max-planck">Maryland Max Planck PhD Program</a>:</strong> spend time at both MPI in Germany and UMD in the US, work with tons of great folks, and get paid more!
@@ -84,6 +85,7 @@
           </div>
     </div>   
    </div>
+ </div>
 </body>
 
 <!-- Mirrored from 127.0.0.1:9292/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 09 May 2021 05:33:22 GMT -->
