--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <fieldset></fieldset>
             <p>  I'm a 3rd year PhD student from <a href="https://www.gs.tum.de/en/adone/start/">AdONE</a>  (Advanced Optimization in a Networked Economy) , a training community targeting at the intersection of mathematics, computer science, and management science, at the Technical University of Munich, in Germany. I got my master degree from the <a href="http://gpes.c.u-tokyo.ac.jp/">University of Tokyo</a>, Japan and spent years as a research assistant in <a href="https://www.jst.go.jp/erato/kawarabayashi/english/index.html">National Institute of Informatics</a>, Japan. Therefore, I have some background in theoretical computer science and applied economics. I have a deep interest in utilizing mathematical modeling and computing techniques (and AI) to design mechanisms, policy/data analysis, and development to markets (though not limited to).</p>
                 <p>
-                    My research is currently supported by Prof. Dr. Stefan Minner <a href="https://www.ot.mgt.tum.de/log/team/minner/">Prof. Dr. Stefan Minner</a> 
+                    My research is currently supported by <a href="https://www.ot.mgt.tum.de/log/team/minner/">Prof. Dr. Stefan Minner</a> 
                     (TUM School of Management, TUM, currently Editor-in-Chief of <a href="https://www.journals.elsevier.com/international-journal-of-production-economics">IJPE</a> )
                      and <a href=" https://www.professoren.tum.de/en/bichler-martin">Prof. Dr. Martin Bichler</a>(Department of Informatics, TUM.).
-                      Meanwhile I am cooperating with <a href="Department of Mathematics, Keio University, Japan">Prof. Dr. Naonori Kakimura</a>, 
-                      <a href="http://www.math.keio.ac.jp/~kakimura/">Stefan Kober and Martin Bullinger</a> extensively. 
+                      Meanwhile I am cooperating with <a href="Department of Mathematics, Keio University, Japan">Prof. Dr. Naonori Kakimura</a>, Stefan Kober and 
+                      <a href="http://www.math.keio.ac.jp/~kakimura/">Martin Bullinger</a> extensively. 
                       I enjoy talking to people in academia or industry to find out how to better optimize this amazing world. I am very interested in market design that can be applied in practice. 
                     </p>
                     <p>
